เพิ่มรายละเอียด

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -61,6 +61,8 @@
         <b>รอบชำระค่าบริการ : </b> {{ api.reversedDate(item.LastPay) }}
         <br/>
         <b>ประเภทสมาชิก : </b> {{ item.DescriptionRate }}
+        <br/>
+        <b>รายละเอียด : </b> {{ item.Note }}
       </ion-card-content>
     </ion-card>
   </div>
