--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -18,7 +18,7 @@
       <ion-option value="0">สำนักงานใหญ่</ion-option>
       <ion-option value="1">สาขาพัทยา</ion-option>
       <ion-option value="2">สาขาโรงโป๊ะ</ion-option>
-      <!-- <ion-option value="3">สาขาสำหรับทดสอบ</ion-option> -->
+      <ion-option value="3">อินเทอร์เน็ต</ion-option>
     </ion-select>
   </ion-item>
 
